src/test/deca/etapeB/valid/int_decl.deca
// Description:
//   Test d'une déclaration simple d'entier
//
// Resultats:
// ima_output: 0
//

{
    int pair = 3123432138;
}