src/test/deca/etapeB/invalid/double_def.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 11 : définition double
// 

{
    int a = 5;
    int a = 3;
}
